# abbyy_cpp_homework

./: .gitmodules
HW1/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp  task4.cpp
HW2/: CMakeLists.txt  Person.h  leetcode1.cpp  leetcode2.cpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task6.cpp
HW2/task5/: A.cppm  B.cppm  Example.cppm  internals.cppm  main.cpp
HW3/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
HW4/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp  task4.cpp
HW5/: CMakeLists.txt  graph.txt  task1.cpp  task2.cpp
